package de.dhbw.demo.associations.n;

public class Wagon1 {
}
