package de.dhbw.demo.associations.n;

public class Wagon2 {

    public Integer id;

    public Train2 train;

    public int trainId;

}
